Replace the matrix module with Eigen library

--- a/schrodinger_equation/makefile
+++ b/schrodinger_equation/makefile
@@ -1,10 +1,10 @@
 CXX := icpc
-WARNINGFLAGS := -Wall -Wextra -Wconversion -Wshadow -Werror
-CXXFLAGS := ${WARNINGFLAGS} -mkl -std=c++17 -fast -g3 -fopenmp
-LDFLAGS := ${WARNINGFLAGS} -mkl -std=c++17 -ipo -Ofast -xHost -Wl,-fuse-ld=gold -g3 -fopenmp
+WARNINGFLAGS := -Wall -Wextra
+CXXFLAGS := ${WARNINGFLAGS} -mkl -std=c++17 -fast -fopenmp
+LDFLAGS := ${WARNINGFLAGS} -mkl -std=c++17 -ipo -Ofast -xHost -Wl,-fuse-ld=gold -fopenmp
 LDLIBS := -lpthread
-Objects := matrix.o general.o pes.o main.o
-HeaderFile := matrix.h general.h pes.h
+Objects := general.o pes.o main.o
+HeaderFile := general.h pes.h
 
 .PHONY: all
 all: dvr 
@@ -17,8 +17,6 @@ pes.o: pes.cpp ${HeaderFile}
 	${CXX} -c pes.cpp ${CXXFLAGS} -o pes.o
 general.o: general.cpp ${HeaderFile}
 	${CXX} -c general.cpp ${CXXFLAGS} -o general.o
-matrix.o: matrix.cpp matrix.h
-	${CXX} -c matrix.cpp ${CXXFLAGS} -o matrix.o
 
 .PHONY: clean
 clean:
