Using Shogun 6.1.4 to do the gaussian process and remove gsl optimization

--- a/test/makefile
+++ b/test/makefile
@@ -1,22 +1,17 @@
 CXX := icpc
 WARNINGFLAGS := -Wall -Wextra
-CXXFLAGS := ${WARNINGFLAGS} -mkl -std=c++17 -fast -fopenmp
-LDFLAGS := ${WARNINGFLAGS} -mkl -std=c++17 -ipo -Ofast -xHost -Wl,-fuse-ld=gold -fopenmp
-LDLIBS := -lpthread -lgsl
-Objects := rand.o gpr.o main.o
-HeaderFile := rand.h gpr.h
+CXXFLAGS := ${WARNINGFLAGS} -mkl -std=c++14 -fast -fopenmp
+LDFLAGS := ${WARNINGFLAGS} -mkl -std=c++14 -ipo -Ofast -xHost -Wl,-fuse-ld=gold -fopenmp
+LDLIBS := -lpthread -lshogun
+Objects := main.o
 
 .PHONY: all
 all: gp_test 
 
 gp_test: ${Objects}
 	${CXX} ${Objects} ${LDFLAGS} -o gp_test ${LDLIBS}
-main.o: main.cpp ${HeaderFile}
+main.o: main.cpp
 	${CXX} -c main.cpp ${CXXFLAGS} -o main.o
-gpr.o: gpr.cpp ${HeaderFile}
-	${CXX} -c gpr.cpp ${CXXFLAGS} -o gpr.o
-rand.o: rand.cpp rand.h
-	${CXX} -c rand.cpp ${CXXFLAGS} -o rand.o
 
 .PHONY: clean
 clean:
@@ -24,4 +19,4 @@ clean:
 
 .PHONY: distclean
 distclean: clean
-	\rm -rf -- *log *out* input *.txt *.png *.gif dvr
+	\rm -rf -- *log *out* input *.txt *.png *.gif gp_test
