optimize hyperparameter with simplex from gsl using precompiled header move functions into independent files add README

--- a/test/makefile
+++ b/test/makefile
@@ -1,23 +1,28 @@
 CXX := icpc
 WARNINGFLAGS := -Wall -Wextra
-CXXFLAGS := ${WARNINGFLAGS} -mkl -std=c++14 -fast -fopenmp
+CXXFLAGS := ${WARNINGFLAGS} -mkl -std=c++14 -fast -fopenmp -pch
 LDFLAGS := ${WARNINGFLAGS} -mkl -std=c++14 -ipo -Ofast -xHost -Wl,-fuse-ld=gold -fopenmp
-LDLIBS := -lpthread -lshogun
-Objects := main.o
+LDLIBS := -lpthread -lshogun -lgsl
+Objects := io.o gpr.o main.o
+PCH := stdafx.h
 
 .PHONY: all
 all: gp_test 
 
 gp_test: ${Objects}
 	${CXX} ${Objects} ${LDFLAGS} -o gp_test ${LDLIBS}
-main.o: main.cpp
+main.o: main.cpp gpr.h io.h ${PCH}
 	${CXX} -c main.cpp ${CXXFLAGS} -o main.o
+gpr.o: gpr.cpp gpr.h io.h ${PCH}
+	${CXX} -c gpr.cpp ${CXXFLAGS} -o gpr.o
+io.o: io.cpp io.h ${PCH}
+	${CXX} -c io.cpp ${CXXFLAGS} -o io.o
 
 .PHONY: clean
 clean:
-	\rm -f *.o
+	\rm -f *.o *.pchi
 
 .PHONY: distclean
 distclean: clean
 	find *.txt | egrep -v "(^x|^p|^t)" | xargs rm
-	\rm -rf -- *log *out* input *.png *.gif gp_test
+	\rm -rf -- *log *out* input *.png *.gif gp_test core.*
