Switch shogun-6.1.4 to develop branch combine all tests into 1 makefile add .x to executables

--- a/test/makefile
+++ b/test/makefile
@@ -1,24 +1,31 @@
 CXX := icpc
 WARNINGFLAGS := -Wall -Wextra
-CXXFLAGS := ${WARNINGFLAGS} -mkl -std=c++14 -fast -fopenmp -pch
+CXXFLAGS := ${WARNINGFLAGS} -mkl -std=c++17 -fast -fopenmp -pch
 LDFLAGS := ${WARNINGFLAGS} -mkl -std=c++17 -ipo -Ofast -xHost -Wl,-fuse-ld=gold -fopenmp
 LDLIBS := -lpthread -lnlopt -lshogun
-Objects := io.o gpr.o main.o
+Objects := io.o gpr.o
 PCH := stdafx.h
+HEADERS := ${PCH} gpr.h io.h
 
 .PHONY: all
-all: gp_test con_gp_test
+all: evolve_gp_test.x screenshot_gp_test.x continue_gp_test.x
 
-gp_test: ${Objects}
-	${CXX} ${Objects} ${LDFLAGS} -o gp_test ${LDLIBS}
-main.o: main.cpp gpr.h io.h ${PCH}
-	${CXX} -c main.cpp ${CXXFLAGS} -o main.o
-gpr.o: gpr.cpp gpr.h io.h ${PCH}
+evolve_gp_test.x: ${Objects} main_evolve.o
+	${CXX} ${Objects} main_evolve.o ${LDFLAGS} -o evolve_gp_test.x ${LDLIBS}
+main_evolve.o: main_evolve.cpp ${HEADERS}
+	${CXX} -c main_evolve.cpp ${CXXFLAGS} -o main_evolve.o
+
+screenshot_gp_test.x: ${Objects} main_screenshot.o
+	${CXX} ${Objects} main_screenshot.o ${LDFLAGS} -o screenshot_gp_test.x ${LDLIBS}
+main_screenshot.o: main_screenshot.cpp ${HEADERS}
+	${CXX} -c main_screenshot.cpp ${CXXFLAGS} -o main_screenshot.o
+
+gpr.o: gpr.cpp ${HEADERS}
 	${CXX} -c gpr.cpp ${CXXFLAGS} -o gpr.o
 io.o: io.cpp io.h ${PCH}
 	${CXX} -c io.cpp ${CXXFLAGS} -o io.o
 
-con_gp_test: continue_test.cpp
+continue_gp_test.x: continue_test.cpp
 	${CXX} continue_test.cpp ${LDFLAGS} -o con_gp_test ${LDLIBS}
 
 .PHONY: clean
