Ignore notes; unavailable to public

--- a/.gitignore
+++ b/.gitignore
@@ -27,13 +27,5 @@ out*
 html/
 latex/
 
-# latex intermediate
-*.aux
-*.bbl
-*.blg
-*.fdb_latexmk
-*.fls
-*.log
-*.out
-*.synctex(busy)
-*.synctex.gz
+# notes
+notes/
