--main program-- Add off-diag elements, and optimize them First optimize each element, then diagonal (with <1> and <E>), then all elements (with <1>, <E> and purity) --monte carlo-- Remove weight function, using std::abs instead Remove #points in MCParameters Sample MC integral points from rho^2 --output and plot-- Output purity for each elements and plot them, instead of the whole --predict-- Compare prediction with variance, with a continuous cutoff --other-- Clang-formatted and comments available for doxygen Add integer-power power function and more constexpr

--- a/gaussian_process_liouville_equation/makefile
+++ b/gaussian_process_liouville_equation/makefile
@@ -29,11 +29,11 @@ $(PCH): stdafx.h
 
 .PHONY: clean
 clean:
-	\rm -f *.o *.d *.gch
+	\rm -f *.o *.d* *.gch
 
 .PHONY: distclean
 distclean: clean
-	\rm -rf -- *log *.out* *.png *.gif gp_test core.* *.txt
+	\rm -rf -- *log *.out* *.png *.gif gp_test core.* *.txt Doxyfile* html/ latex/
 
 CLANG_FORMAT := $(shell grep alias\ clang-format= ~/.bash_aliases | awk -F"'" '{print $$2}')
 .PHONY: format
